namespaces/media/tautulli/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: int
  annotations:
    kubernetes.io/ingress.class: wg69
    external-dns.alpha.kubernetes.io/ttl: "600"
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.69.1.1/27, 10.69.1.49/27, 10.69.1.82/32
spec:
  tls:
  - hosts:
    - stats.media.int.wg69.net
    secretName: tls-wildcard
  rules:
  - host: stats.media.int.wg69.net
    http:
      paths:
      - path: /
        backend:
          serviceName: srv
          servicePort: http
